[package]
name = "converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.92"
console_error_panic_hook = "0.1.7"
js-sys = "=0.3.65"
web-sys = { version = "=0.3.65", features = ["Window", "Document", "console"] }
